# iseal-discord-bot

./: LICENSE  README.md  antilink.json  config.json  discord_bot.py  main.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  webhook_listener.py  webserver.py
.github/workflows/: python-publish.yml  release.yml
src/: main.py  requirements.txt
src/functions/: auto_messages.py  checks.py  embed_creator.py  threads.py
