[tool.poetry]
name = "discord-bot"
version = "1.1.6"
description = "Discord bot made for ISeal"
authors = ["LunarcatOwO <54731257+LunarcatOwO@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
